--- a/wiki/it/Macro_View_Rotation.html
+++ b/wiki/it/Macro_View_Rotation.html
@@ -3,7 +3,7 @@
 <li><a href="../Macro_View_Rotation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro View Rotation (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_View_Rotation.html" class="mw-pt-progress mw-pt-progress--med" title="Macro View Rotation (31% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macro_View_Rotation.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro View Rotation (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_View_Rotation.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Widok obrotowy (8% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_View_Rotation.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Rotace pohledu (38% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Macro_View_Rotation.html" class="mw-pt-progress mw-pt-progress--low" title="Macro View Rotation/ru (8% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -119,11 +119,8 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <p>Si riferiscono a tre icone per simboleggiare le direzioni di rotazione. Un file zip contenente queste icone pu&ograve; essere trovato <a rel="nofollow" class="external text" href="http://forum.freecad.org/download/file.php?id=453">qui</a>, le immagini devono essere collocate nella cartella contenente le tue macro. Sentiti libero di contribuire da farne migliori!
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div class="mw-translate-fuzzy">
 <p>L'ultima versione della macro &egrave; disponibile all'indirizzo <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/blob/master/PureGui/ViewRotation.FCMacro">ViewRotation.FCMacro</a> ma il modo pi&ugrave; semplice per installare questa macro &egrave; tramite <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon Manager</a>.
-</p>
-</div>
-<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_View_Rotation.png&amp;filetimestamp=20190607123811&amp;.html" class="mw-file-description"><img src="../File/Macro_View_Rotation.png" decoding="async" width="65" height="69" class="mw-file-element" data-file-width="65" data-file-height="69"></a></span>
+</p><p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_View_Rotation.png&amp;filetimestamp=20190607123811&amp;.html" class="mw-file-description"><img src="../File/Macro_View_Rotation.png" decoding="async" width="65" height="69" class="mw-file-element" data-file-width="65" data-file-height="69"></a></span>
 </p><p><b>Macro View Rotation.FCMacro</b>
 </p>
 <pre># -*- coding: utf-8 -*-
@@ -386,31 +383,31 @@ if __name__ == '__main__':
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123155919
+Cached time: 20260123155930
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.052 seconds
-Real time usage: 0.306 seconds
-Preprocessor visited node count: 135/1000000
+CPU time usage: 0.048 seconds
+Real time usage: 0.304 seconds
+Preprocessor visited node count: 134/1000000
 Post&#8208;expand include size: 3069/2097152 bytes
 Template argument size: 9396/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 11254/5000000 bytes
+Unstrip post&#8208;expand size: 11258/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   55.947      1 -total
- 31.80%   17.789      1 Template:Codeextralink
- 19.57%   10.950      1 Template:Macro/it
- 18.82%   10.527      1 Template:Code
- 15.79%    8.834      1 Template:MacroCode
- 13.19%    7.381      1 Template:Clear
+100.00%   82.145      1 -total
+ 40.00%   32.857      1 Template:Clear
+ 18.78%   15.431      1 Template:Macro/it
+ 17.33%   14.236      1 Template:Code
+ 14.57%   11.967      1 Template:Codeextralink
+  8.10%    6.651      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2340-0!canonical and timestamp 20260123155919 and revision id 1742985. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2340-0!canonical and timestamp 20260123155929 and revision id 1742987. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
