--- a/wiki/it/Macro_DXF_to_Face_and_Sketch.html
+++ b/wiki/it/Macro_DXF_to_Face_and_Sketch.html
@@ -75,16 +75,11 @@ Facce e Schizzi da DXF
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Questa macro converte gli elementi selezionati di un DXF importato in facce e schizzi.
+</p><p>Pu&ograve; essere utilizzato anche per convertire 'Shape2DView' in Schizzi e funziona anche se sono presenti B-Spline.
+</p><p><span id="Usage"></span>
 </p>
-</div>
-<p>Pu&ograve; essere utilizzato anche per convertire 'Shape2DView' in Schizzi e funziona anche se sono presenti B-Spline.
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Uso">Uso</span></h2>
 <ul><li>Importare un file DXF</li>
@@ -330,13 +325,13 @@ else:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123161152
+Cached time: 20260123161206
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.183 seconds
-Preprocessor visited node count: 116/1000000
+CPU time usage: 0.036 seconds
+Real time usage: 0.186 seconds
+Preprocessor visited node count: 112/1000000
 Post&#8208;expand include size: 2097/2097152 bytes
 Template argument size: 9990/2097152 bytes
 Highest expansion depth: 5/100
@@ -346,13 +341,13 @@ Unstrip post&#8208;expand size: 10790/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.038      1 -total
- 45.12%   16.713      1 Template:Macro/it
- 30.23%   11.197      1 Template:Clear
- 23.78%    8.809      1 Template:MacroCode
+100.00%   38.528      1 -total
+ 41.72%   16.075      1 Template:Macro/it
+ 40.65%   15.660      1 Template:MacroCode
+ 16.85%    6.491      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:70446-0!canonical and timestamp 20260123161151 and revision id 1742991. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:70446-0!canonical and timestamp 20260123161206 and revision id 1742995. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
