--- a/wiki/it/Macro_DXF_to_Face_and_Sketch.html
+++ b/wiki/it/Macro_DXF_to_Face_and_Sketch.html
@@ -91,11 +91,8 @@ Facce e Schizzi da DXF
 <h2><span class="mw-headline" id="Opzioni">Opzioni</span></h2>
 <ul><li>Modificare create_face=True oppure create_sketch=True in  False per generare solo un tipo di oggetti</li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_DXF_to_Face_and_Sketch.png&amp;filetimestamp=20160723200645&amp;.html" class="mw-file-description"><img src="../File/Macro_DXF_to_Face_and_Sketch.png" decoding="async" width="66" height="64" class="mw-file-element" data-file-width="66" data-file-height="64"></a></span>
-</p>
-</div>
-<p><br>
+<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_DXF_to_Face_and_Sketch.png&amp;filetimestamp=20160723200645&amp;.html" class="mw-file-description"><img src="../File/Macro_DXF_to_Face_and_Sketch.png" decoding="async" width="66" height="64" class="mw-file-element" data-file-width="66" data-file-height="64"></a></span>
+</p><p><br>
 <b>Macro_DXF_to_Face_and_Sketch.FCMacro</b>
 </p>
 <pre>##    Select the items to be processed
@@ -312,23 +309,23 @@ if FreeCADGui.Selection.getSelection():
 else:
     #FreeCAD.Console.PrintError("Select elements from dxf imported file\n")
     FreeCAD.Console.PrintWarning("Select elements from dxf imported file\n")</pre>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Links">Links</span></h2>
-</div>
+<p><span id="Links"></span>
+</p>
 <h2><span class="mw-headline" id="Link">Link</span></h2>
+<h2><span class="mw-headline" id="Link_2">Link</span></h2>
 <ul><li>Forum <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=28&amp;t=16686">Creare uno sketch partendo da un file dxf importato</a></li>
 <li>Esempi di macro <a rel="nofollow" class="external text" href="http://www.freecad.org/wiki/index.php?title=Macros_recipes">Macro Creating faces from a DXF file</a></li>
 <li>Precedente versione <a href="../it/Macro_Creating_faces_from_a_DXF_file.html" title="Macro Creating faces from a DXF file/it">Macro Creating faces from a DXF file</a></li></ul>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123161223
+Cached time: 20260123161238
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.041 seconds
-Real time usage: 0.197 seconds
-Preprocessor visited node count: 108/1000000
+CPU time usage: 0.029 seconds
+Real time usage: 0.069 seconds
+Preprocessor visited node count: 107/1000000
 Post&#8208;expand include size: 2097/2097152 bytes
 Template argument size: 9990/2097152 bytes
 Highest expansion depth: 5/100
@@ -338,13 +335,13 @@ Unstrip post&#8208;expand size: 10791/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.882      1 -total
- 35.80%   11.771      1 Template:Macro/it
- 31.49%   10.354      1 Template:MacroCode
- 29.42%    9.675      1 Template:Clear
+100.00%   14.547      1 -total
+ 44.28%    6.441      1 Template:Macro/it
+ 44.23%    6.434      1 Template:MacroCode
+  9.58%    1.393      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:70446-0!canonical and timestamp 20260123161223 and revision id 1742999. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:70446-0!canonical and timestamp 20260123161238 and revision id 1743002. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
