--- a/wiki/it/Macro_DXF_to_Face_and_Sketch.html
+++ b/wiki/it/Macro_DXF_to_Face_and_Sketch.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_DXF_to_Face_and_Sketch.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro DXF zu Fl&auml;che und Skizze (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_DXF_to_Face_and_Sketch.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro DXF to Face and Sketch (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_DXF_to_Face_and_Sketch.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro DXF to Face and Sketch (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_DXF_to_Face_and_Sketch.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Utw&oacute;rz &#347;cian&#281; lub szkic z pliku DXF (8% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -80,12 +80,9 @@ Facce e Schizzi da DXF
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Uso">Uso</span></h2>
 <ul><li>Importare un file DXF</li>
-<li>Selezionare gli elementi da processare</li>
-<li>Avviare la macro, tutti gli oggetti selezionati vengono analizzati e trasformati in facce e in schizzi.</li></ul>
-</div>
+<li>Selezionare gli elementi da elaborare</li>
+<li>Avviare la macro: tutti gli oggetti selezionati vengono analizzati e trasformati in facce e schizzi.</li></ul>
 <p><span id="Options"></span>
 </p>
 <h2><span class="mw-headline" id="Opzioni">Opzioni</span></h2>
@@ -319,29 +316,29 @@ else:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123161238
+Cached time: 20260123161315
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.029 seconds
-Real time usage: 0.069 seconds
-Preprocessor visited node count: 107/1000000
+CPU time usage: 0.043 seconds
+Real time usage: 0.186 seconds
+Preprocessor visited node count: 103/1000000
 Post&#8208;expand include size: 2097/2097152 bytes
 Template argument size: 9990/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 10791/5000000 bytes
+Unstrip post&#8208;expand size: 10795/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.547      1 -total
- 44.28%    6.441      1 Template:Macro/it
- 44.23%    6.434      1 Template:MacroCode
-  9.58%    1.393      1 Template:Clear
+100.00%   35.334      1 -total
+ 41.31%   14.598      1 Template:Macro/it
+ 19.90%    7.030      1 Template:MacroCode
+ 18.36%    6.486      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:70446-0!canonical and timestamp 20260123161238 and revision id 1743002. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:70446-0!canonical and timestamp 20260123161314 and revision id 1743004. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
