--- a/wiki/it/Macro_Creating_faces_from_a_DXF_file.html
+++ b/wiki/it/Macro_Creating_faces_from_a_DXF_file.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Creating faces from a DXF file/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Creating+faces+from+a+DXF+file&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-progress mw-pt-progress--med" title="Makro Fl&auml;chen aus einer DXF-Datei erstellen (46% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Fl&auml;chen aus einer DXF-Datei erstellen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Creating faces from a DXF file (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Creating faces from a DXF file (46% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Creating faces from a DXF file (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-progress mw-pt-progress--med" title="Makrodefinicja: Utw&oacute;rz &#347;cian&#281; z pliku DXF (46% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../pl/Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Utw&oacute;rz &#347;cian&#281; z pliku DXF (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -72,15 +72,11 @@ Facce da DXF
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>Questa macro crea facce da un file DXF, i "Layer" sono riconosciuti separatamente e inseriti in gruppi.
-</p>
-</div>
-<p>Nel file ci devono essere i gruppi.
+</p><p>Nel file ci devono essere i gruppi.
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Uses">Uses</span></h2>
@@ -111,9 +107,7 @@ for group in doc.findObjects('App::DocumentObjectGroup'):
         faceobj.Shape = face
     except Part.OCCError: # Exception: # 
         FreeCAD.Console.PrintError('Error in Group %s (%s)'&nbsp;% (group.Name,group.Label)+"\n")</pre>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Link">Link</span></h2>
-</div>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Link_2">Link</span></h2>
 <p>Nel forum <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=3&amp;t=8144">Creating faces from a DXF file</a>
@@ -123,28 +117,28 @@ for group in doc.findObjects('App::DocumentObjectGroup'):
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20251021160150
+Cached time: 20260123161521
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.065 seconds
-Real time usage: 0.078 seconds
-Preprocessor visited node count: 106/1000000
+CPU time usage: 0.036 seconds
+Real time usage: 0.159 seconds
+Preprocessor visited node count: 101/1000000
 Post&#8208;expand include size: 2096/2097152 bytes
 Template argument size: 1133/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1918/5000000 bytes
+Unstrip post&#8208;expand size: 1936/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.265      1 -total
- 72.42%    4.537      1 Template:Macro/it
- 25.23%    1.581      1 Template:MacroCode
+100.00%   25.015      1 -total
+ 63.00%   15.759      1 Template:Macro/it
+ 36.52%    9.135      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44129-0!canonical and timestamp 20251021160150 and revision id 1670176. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44129-0!canonical and timestamp 20260123161521 and revision id 1743010. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
