--- a/wiki/it/Macro_Creating_faces_from_a_DXF_file.html
+++ b/wiki/it/Macro_Creating_faces_from_a_DXF_file.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Fl&auml;chen aus einer DXF-Datei erstellen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Creating faces from a DXF file (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Creating faces from a DXF file (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Utw&oacute;rz &#347;cian&#281; z pliku DXF (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -108,37 +108,33 @@ for group in doc.findObjects('App::DocumentObjectGroup'):
     except Part.OCCError: # Exception: # 
         FreeCAD.Console.PrintError('Error in Group %s (%s)'&nbsp;% (group.Name,group.Label)+"\n")</pre>
 <h2><span class="mw-headline" id="Link">Link</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Link_2">Link</span></h2>
 <p>Nel forum <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=3&amp;t=8144">Creating faces from a DXF file</a>
-</p>
-</div>
-<p>Questo &egrave; un esempio: <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=3&amp;t=8280&amp;p=67863#p67840">Generate 3D solid from intersection of three imported 2D</a>
+</p><p>Questo &egrave; un esempio: <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=3&amp;t=8280&amp;p=67863#p67840">Generate 3D solid from intersection of three imported 2D</a>
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123161521
+Cached time: 20260123161529
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.159 seconds
-Preprocessor visited node count: 101/1000000
+CPU time usage: 0.032 seconds
+Real time usage: 0.211 seconds
+Preprocessor visited node count: 97/1000000
 Post&#8208;expand include size: 2096/2097152 bytes
 Template argument size: 1133/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1936/5000000 bytes
+Unstrip post&#8208;expand size: 1937/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.015      1 -total
- 63.00%   15.759      1 Template:Macro/it
- 36.52%    9.135      1 Template:MacroCode
+100.00%   26.793      1 -total
+ 57.06%   15.287      1 Template:MacroCode
+ 42.53%   11.395      1 Template:Macro/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44129-0!canonical and timestamp 20260123161521 and revision id 1743010. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44129-0!canonical and timestamp 20260123161528 and revision id 1743012. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
