--- a/wiki/it/Macro_Creating_faces_from_a_DXF_file.html
+++ b/wiki/it/Macro_Creating_faces_from_a_DXF_file.html
@@ -89,11 +89,8 @@ Facce da DXF
 <p>Nota: un oggetto non chiuso restituisce un errore
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Creating_faces_from_a_DXF_file.png&amp;filetimestamp=20190615132235&amp;.html" class="mw-file-description"><img src="../File/Macro_Creating_faces_from_a_DXF_file.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro_Creating_faces_from_a_DXF_file.FCMacro</b>
+<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Creating_faces_from_a_DXF_file.png&amp;filetimestamp=20190615132235&amp;.html" class="mw-file-description"><img src="../File/Macro_Creating_faces_from_a_DXF_file.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro_Creating_faces_from_a_DXF_file.FCMacro</b>
 </p>
 <pre>import FreeCAD,Part,OpenSCAD2Dgeom
 doc = App.ActiveDocument
@@ -113,13 +110,13 @@ for group in doc.findObjects('App::DocumentObjectGroup'):
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123161529
+Cached time: 20260123161545
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.211 seconds
-Preprocessor visited node count: 97/1000000
+CPU time usage: 0.027 seconds
+Real time usage: 0.113 seconds
+Preprocessor visited node count: 96/1000000
 Post&#8208;expand include size: 2096/2097152 bytes
 Template argument size: 1133/2097152 bytes
 Highest expansion depth: 5/100
@@ -129,12 +126,12 @@ Unstrip post&#8208;expand size: 1937/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.793      1 -total
- 57.06%   15.287      1 Template:MacroCode
- 42.53%   11.395      1 Template:Macro/it
+100.00%   18.523      1 -total
+ 55.85%   10.345      1 Template:MacroCode
+ 43.50%    8.058      1 Template:Macro/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44129-0!canonical and timestamp 20260123161528 and revision id 1743012. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44129-0!canonical and timestamp 20260123161544 and revision id 1743014. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
