--- a/wiki/it/Macro_Creating_faces_from_a_DXF_file.html
+++ b/wiki/it/Macro_Creating_faces_from_a_DXF_file.html
@@ -77,10 +77,9 @@ Facce da DXF
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>Questa macro crea facce da un file DXF, i "Layer" sono riconosciuti separatamente e inseriti in gruppi.
 </p><p>Nel file ci devono essere i gruppi.
+</p><p><span id="Uses"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Uses">Uses</span></h2>
-</div>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Uso">Uso</span></h2>
 <p>Avviare la macro e tutti gli oggetti vengono analizzati e trasformati in facce.
@@ -110,12 +109,12 @@ for group in doc.findObjects('App::DocumentObjectGroup'):
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123161545
+Cached time: 20260123161622
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.027 seconds
-Real time usage: 0.113 seconds
+CPU time usage: 0.037 seconds
+Real time usage: 0.195 seconds
 Preprocessor visited node count: 96/1000000
 Post&#8208;expand include size: 2096/2097152 bytes
 Template argument size: 1133/2097152 bytes
@@ -126,12 +125,12 @@ Unstrip post&#8208;expand size: 1937/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.523      1 -total
- 55.85%   10.345      1 Template:MacroCode
- 43.50%    8.058      1 Template:Macro/it
+100.00%   37.210      1 -total
+ 62.19%   23.142      1 Template:MacroCode
+ 37.40%   13.916      1 Template:Macro/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44129-0!canonical and timestamp 20260123161544 and revision id 1743014. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44129-0!canonical and timestamp 20260123161622 and revision id 1743016. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
