--- a/wiki/it/Macro_Creating_faces_from_a_DXF_file.html
+++ b/wiki/it/Macro_Creating_faces_from_a_DXF_file.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Fl&auml;chen aus einer DXF-Datei erstellen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Creating faces from a DXF file (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Creating faces from a DXF file (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Creating_faces_from_a_DXF_file.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Utw&oacute;rz &#347;cian&#281; z pliku DXF (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -80,12 +80,8 @@ Facce da DXF
 </p><p><span id="Uses"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Uso">Uso</span></h2>
-<p>Avviare la macro e tutti gli oggetti vengono analizzati e trasformati in facce.
-</p>
-</div>
-<p>Nota: un oggetto non chiuso restituisce un errore
+<p>Eseguire la macro, cos&igrave; tutti gli oggetti vengono analizzati e trasformati in facce.
+</p><p>Nota: un oggetto non chiuso restituisce un errore
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Creating_faces_from_a_DXF_file.png&amp;filetimestamp=20190615132235&amp;.html" class="mw-file-description"><img src="../File/Macro_Creating_faces_from_a_DXF_file.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
@@ -109,28 +105,28 @@ for group in doc.findObjects('App::DocumentObjectGroup'):
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123161622
+Cached time: 20260123161700
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.195 seconds
-Preprocessor visited node count: 96/1000000
+CPU time usage: 0.033 seconds
+Real time usage: 0.188 seconds
+Preprocessor visited node count: 92/1000000
 Post&#8208;expand include size: 2096/2097152 bytes
 Template argument size: 1133/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1937/5000000 bytes
+Unstrip post&#8208;expand size: 1941/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.210      1 -total
- 62.19%   23.142      1 Template:MacroCode
- 37.40%   13.916      1 Template:Macro/it
+100.00%   34.769      1 -total
+ 52.28%   18.178      1 Template:MacroCode
+ 47.40%   16.480      1 Template:Macro/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44129-0!canonical and timestamp 20260123161622 and revision id 1743016. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:44129-0!canonical and timestamp 20260123161659 and revision id 1743018. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
