--- a/wiki/it/Macro_EasyReflector.html
+++ b/wiki/it/Macro_EasyReflector.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_EasyReflector.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Einfacher Reflektor (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_EasyReflector.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro EasyReflector (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_EasyReflector.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro EasyReflector (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_EasyReflector.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: &#321;atwy Reflektor (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -74,9 +74,9 @@ Macro EasyReflector
 </td></tr>
 </tbody></table>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div> 
+<p><span id="Description"></span>
+</p>
+<h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>EasyReflector makes it easy to manage textures in FreeCAD. It creates a <a href="../App_FeaturePython.html" title="App FeaturePython">Feature Python</a> object that persists when the document is reloaded. Select from a variety of included textures, or use your own images.
 </p>
@@ -147,12 +147,12 @@ webbrowser.open("https://gist.github.com/mwganson/aea3c51981c0b994cfd961cf4db56b
 
 <!-- 
 NewPP limit report
-Cached time: 20260123164713
+Cached time: 20260123164722
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.058 seconds
-Real time usage: 0.229 seconds
+CPU time usage: 0.035 seconds
+Real time usage: 0.057 seconds
 Preprocessor visited node count: 126/1000000
 Post&#8208;expand include size: 3993/2097152 bytes
 Template argument size: 1330/2097152 bytes
@@ -163,14 +163,14 @@ Unstrip post&#8208;expand size: 2143/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.537      1 -total
- 30.68%   12.438      1 Template:Caption
- 24.42%    9.898      1 Template:Codeextralink
- 22.82%    9.251      1 Template:Macro
- 19.29%    7.821      1 Template:CodeDownload
+100.00%   11.324      1 -total
+ 33.94%    3.844      1 Template:Macro
+ 24.93%    2.823      1 Template:Codeextralink
+ 19.20%    2.174      1 Template:Caption
+ 19.08%    2.160      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412474-0!canonical and timestamp 20260123164712 and revision id 1743020. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412474-0!canonical and timestamp 20260123164722 and revision id 1743022. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
